// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Endpoint > .getResponses() > should return the negative responses 1`] = `
[
  {
    "mimeTypes": [
      "application/json",
    ],
    "schema": {
      "_type": "ZodObject",
      "shape": {
        "error": {
          "_type": "ZodObject",
          "shape": {
            "message": {
              "_type": "ZodString",
            },
          },
        },
        "status": {
          "_type": "ZodLiteral",
          "value": "error",
        },
      },
    },
    "statusCodes": [
      400,
    ],
  },
]
`;

exports[`Endpoint > .getResponses() > should return the positive responses 1`] = `
[
  {
    "mimeTypes": [
      "application/json",
    ],
    "schema": {
      "_type": "ZodObject",
      "shape": {
        "data": {
          "_type": "ZodObject",
          "shape": {
            "something": {
              "_type": "ZodNumber",
            },
          },
        },
        "status": {
          "_type": "ZodLiteral",
          "value": "success",
        },
      },
    },
    "statusCodes": [
      200,
    ],
  },
]
`;
